Avoid clipping footsteps and bots circles

--- a/style.css
+++ b/style.css
@@ -7,3 +7,12 @@ body {
     font-size: 1.4em;
     -webkit-font-smoothing: antialiased;
 }
+
+h1 {
+    margin-top: 2em;
+    margin-bottom: -1.4em;
+    z-index: 1;
+    position: relative;
+    letter-spacing: 20px;
+    text-indent: 20px;
+}
